# alg_puzzles

./: .gitignore  README.md  acm_skeleton.cpp  acm_skeleton.py
10004_bicoloring/: main.py
10065uselessTilePackers/: acm.cpp
10078artGallery/: acm.py
10267_graphical_editor/: main.cpp
10305_ordering_task/: orderingTask_10305.py
10696_f91/: acm.py  input
10954_addAll/: acm.cpp  input
11049_basicWallMaze/: acm.py
121_pipeFitters/: acm.cpp  acm.py  input
2048/: Makefile  main.c  utils.c  utils.h
3n+1/: Makefile  main.c  program
3regGraph11387/: acm.py
839_notSoMobile/: acm.py
adventOfCode/2020/01/: README.md  part1.cpp  part2.cpp
adventOfCode/2020/02/: part1.cpp  part2.cpp  problem
adventOfCode/2020/03/: part1.cpp  part2.cpp  problem
alg_exam/: algexam.tgz  exam.tgz  main.cpp  main.py  main_correct.py  outc  outp
algoriths/c++/: inserSort.cpp  main
algoriths/python/: heapSort.py  insertSort.py  main.py  max_heap.py  mergeSort.py
amulety/: amulet.tgz  input  main.py
amulety/data/: pub01.in  pub02.in  pub03.in  pub04.in  pub05.in  pub06.in  pub07.in  pub08.in  pub09.in  pub10.in
avl/: avl.py  avl.tgz  lazyAVL.py  main.cpp
blocks_problem/: main.cpp
blueberriesRPLB/: main.cpp  main.py
bookcase/: bookcase.tgz  main.cpp  main.py
bookcase/data/: pub01.in  pub02.in  pub03.in  pub04.in  pub05.in  pub06.in  pub07.in  pub08.in  pub09.in  pub10.in
bricks591/: main.py
bst/: Untitled.ipynb  main.cpp  main.py
bst/data/: pub01.in  pub01.tre  pub02.in  pub02.tre  pub03.in  pub03.tre  pub04.in  pub05.in  pub06.in  pub07.in  pub08.in  pub09.in
cannonball4279/: input  main.py
cat_in_the_hat/: Makefile  main  main.cpp  output
christmasPlay5114/: main.cpp
cinema/: cinema.tgz  main.cpp  main.py
coinChange674/: main.py
countTheFactors10699/: main.cpp
dragontree/: dragontree.py  hw1.tgz  main.c  main.py  pub01.in  pub02.in  pub03.in  pub04.in  pub05.in  pub06.in  pub07.in  pub08.in  pub09.in  pub10.in  run  test
ecological_recycling/: Makefile  main.cpp
frogger534/: acm.py  input
hackerrank/: CMakeLists.txt  carpenter.cpp  carpenter_input  carpenter_old.cpp  names  royalNames.cpp  royalNames_old.cpp  royal_input  shapes.cpp
hartals/: Hartals.java
humbleNumbers443/: acm.py
lightMoreLight10110/: acm.cpp  main.cpp
liningUp270/: acm.cpp
minesweeper/: input  minesweeper.c  out
minimumStepsToOne/: main.cpp  main.py
modely/: main.py
nanorobots/: hw2.tgz  input  main.c  main.py  nanorobots.tgz  test.c  test.py  util.py
nanorobots/testcases/: pub02.in  pub03.in  pub04.in  pub05.in  pub06.in  pub07.in  pub08.in  pub09.in  pub10.in
oilDeposit572/: acm.py
rover/: input  main  main.cpp  main.py  main1.py  main2.py  rover.tgz  run.py
rover/data/: pub01.in  pub02.in  pub03.in  pub04.in  pub05.in  pub06.in  pub07.in  pub08.in  pub09.in  pub10.in
searchingForNessy11044/: main.py
skylineProblem105/: acm.cpp  acm.py
swap_nodes/: 2.in  main.py
teams11609/: acm.py  input
trainswapper299/: input  main.py
trip10137/: input  main  main.c
youCanSayEleven10929/: acm.py
(+53 files in other folders)
